@@ -1,5 +1,6 @@
 plugins {
-    id("java")
+    java
+    application
 }
 
 group = "org.lab"
@@ -9,12 +10,60 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+application {
+    mainClass.set("org.lab.Startup")
+    applicationDefaultJvmArgs = listOf(
+        "--enable-preview",
+        "-Dslf4j.provider=ch.qos.logback.classic.spi.LogbackServiceProvider"
+    )
 }
 
-tasks.test {
-    useJUnitPlatform()
+java {
+    version = JavaVersion.VERSION_25
+}
+
+dependencies {
+
+    implementation(libs.javalin)
+    implementation(libs.javalin.openapi.plugin)
+    implementation(libs.javalin.swagger.plugin)
+    implementation(libs.javalin.openapi.annotation)
+
+    implementation(libs.bcrypt)
+
+    implementation(libs.jdbi.core)
+    implementation(libs.jdbi.jackson2)
+    implementation(libs.jdbi.postgres)
+    implementation(libs.jdbi.sqlobject)
+    implementation(libs.hikaricp)
+
+    implementation(libs.flyway.core)
+    implementation(libs.flyway.database.postgresql)
+    implementation(libs.postgresql)
+
+
+    implementation(libs.slf4j)
+
+    implementation(libs.lombok)
+    implementation(libs.jwt)
+
+    compileOnly(libs.lombok)
+    annotationProcessor(libs.lombok)
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test> {
+    jvmArgs(
+        "--enable-preview"
+    )
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs(
+        "--enable-preview",
+        "-Dslf4j.provider=ch.qos.logback.classic.spi.LogbackServiceProvider"
+    )
 }
